# yuganshu007.github.io

./: resume_github_repo_analysis.md  rstech_bullets_repo_analysis.md
content/: _index.md  (+2 more)
projects/rynova-data-platform/: .gitignore  APPLY_TO_RYNOVA_DATA_PLATFORM.patch  COMPLIANCE.md  HOW_TO_APPLY.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
projects/rynova-data-platform/benchmarks/: _common.py  bench_bullet1_query_latency.py  bench_bullet2_pipeline_failures.py  bench_bullet3_kafka_idempotency.py  bench_bullet4_sql_plans.py
projects/rynova-data-platform/ci/: rynova.yml
projects/rynova-data-platform/dashboards/: README.md  grafana_health.json
projects/rynova-data-platform/deliverables/: deliveries.csv
projects/rynova-data-platform/docs/: design_notes.md
projects/rynova-data-platform/scripts/: generate_fixtures.py  health_report.py
projects/rynova-data-platform/src/rynova_platform/: __init__.py
projects/rynova-data-platform/src/rynova_platform/api/: __init__.py  event_bus.py  service.py
projects/rynova-data-platform/src/rynova_platform/etl/: __init__.py  pipeline.py  schema.py
projects/rynova-data-platform/src/rynova_platform/java_bridge/: __init__.py  compile.py
projects/rynova-data-platform/src/rynova_platform/observability/: __init__.py  metrics.py
projects/rynova-data-platform/src/rynova_platform/sql/: __init__.py  pagination.py  partitioning.py  query_planner.py
projects/rynova-data-platform/src/rynova_platform/streaming/: __init__.py  broker.py  dq_registry.py  idempotent_sink.py
projects/rynova-data-platform/src/rynova_platform/validation/: __init__.py  sdk.py
projects/rynova-data-platform/tests/: conftest.py  test_api_service.py  test_deliverables.py  test_event_bus.py  test_java_bridge.py  test_observability.py  test_pipeline.py  test_query_optimization.py  test_schema_evolution.py  test_smoke.py  test_sql_planner.py  test_streaming.py  test_validation_sdk.py
projects/transcript-intelligence-platform/: .gitignore  COMPLIANCE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
projects/transcript-intelligence-platform/.github/workflows/: ci.yml
projects/transcript-intelligence-platform/benchmarks/: __init__.py  data_quality.py  latency_p95.py  throughput_benchmark.py
projects/transcript-intelligence-platform/data/: sample_metadata.jsonl  sample_transcripts.jsonl
projects/transcript-intelligence-platform/docker/: agent.Dockerfile  dashboard.Dockerfile
projects/transcript-intelligence-platform/docs/: ARCHITECTURE.md  METRICS.md  design_doc.md
projects/transcript-intelligence-platform/docs/results/: agent_latency.json  analytics_speedup.json  data_quality.json  etl_benchmark.json
projects/transcript-intelligence-platform/platform_common/: __init__.py  config.py  data.py  logging.py
projects/transcript-intelligence-platform/scripts/: generate_data.py
projects/transcript-intelligence-platform/services/agent_chatbot/: README.md
projects/transcript-intelligence-platform/services/analytics_dashboard/: README.md
projects/transcript-intelligence-platform/services/etl_spark/: README.md
projects/transcript-intelligence-platform/services/observability/: README.md
projects/transcript-intelligence-platform/src/transcript_intelligence/: __init__.py
projects/transcript-intelligence-platform/tests/: test_chatbot.py  test_dashboard.py  test_etl.py  test_observability.py
(+95 files in other folders)
