[project]
name = "transcript-intelligence-platform"
version = "0.1.0"
description = "Cloud-native transcript ETL + agentic LLM + resilience + self-serve analytics, with reproducible benchmarks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyspark==3.5.1",
    "boto3>=1.34",
    "jsonschema>=4.21",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "streamlit>=1.33",
    "plotly>=5.20",
    "pandas>=2.2",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "structlog>=24.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["platform_common*", "services*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["services", "platform_common"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
