[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "transcript-intelligence"
version = "1.0.0"
description = "Amazon Ads — Transcript Intelligence Platform (SD Curie / Irène)"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0,<3.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35", "plotly>=5.20", "pandas>=2.1"]
aws       = ["boto3>=1.34", "botocore>=1.34"]
spark     = ["pyspark>=3.4"]
dev       = ["pytest>=8.0", "pytest-cov>=5.0", "black>=24.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
log_cli      = true
log_cli_level = "WARNING"

[tool.ruff]
line-length    = 100
target-version = "py39"
select         = ["E", "F", "I", "UP"]
ignore         = ["E501"]

[tool.black]
line-length = 100
